# rag-platform

./: README.md
client/: .env.sample  .gitignore  README.md  next.config.ts  package-lock.json  package.json
client/src/app/: page.tsx
client/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
client/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
client/src/app/(dashboard)/projects/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/chats/[chatId]/: page.tsx
client/src/lib/api/: index.ts
client/src/lib/types/: index.ts
server/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml-default  pyproject.toml  pyproject.toml-default  start_redis.ps1  start_redis.sh  start_server.ps1  start_server.sh  start_worker.ps1  start_worker.sh  stopAll.sh
server/notebooks/: simple_agent.ipynb  supervisor_agent.ipynb
server/redis/: docker-compose.yaml
server/src/: server.py
server/src/config/: index.py
server/src/models/: index.py
server/src/rag/ingestion/: index.py  utils.py
server/src/rag/retrieval/: index.py
server/src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
server/src/services/: awsS3.py  celery.py  llm.py
server/supabase/: config.toml
